페르소나 터미널 테스트 수정